# tripod-support-walk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTINUATION_PROMPT_tripod_support.md  README.md  RUN_PIPELINE.md  crocoddyl.cmake  flake.nix  package.xml
.github/workflows/: conda-ci.yml  nix-ci.yml  ros2-ci.yaml  update-flake-lock.yml
.github/workflows/conda/: conda-env.yml
benchmark/: CMakeLists.txt  all_robots.cpp  arm_manipulation_optctrl.cpp  arm_manipulation_optctrl.py  arm_manipulation_timings.cpp  bipedal_timings.cpp  bipedal_walk_optctrl.py  lqr_optctrl.cpp  lqr_optctrl.py  quadrupedal_gaits_optctrl.cpp  quadrupedal_gaits_optctrl.py  unicycle_optctrl.cpp  unicycle_optctrl.py
benchmark/factory/: arm-kinova.hpp  arm.hpp  legged-robots.hpp
bindings/python/crocoddyl/: CMakeLists.txt  __init__.py  crocoddyl.cpp.in
bindings/python/crocoddyl/core/: actuation-base.cpp.in  core.cpp  core.hpp  cost-base.cpp.in  solver-base.cpp.in  solver-base.hpp  state-base.cpp.in  state-base.hpp
bindings/python/crocoddyl/multibody/: cop-support.cpp.in  friction-cone.cpp.in  wrench-cone.cpp.in
bindings/python/crocoddyl/utils/: biped.py  deprecate.hpp  humanoid.py  namespace.hpp  pendulum.py  quadruped.py
doc/bib/: tassa-icra14.bib
examples/: CMakeLists.txt  _verify_fall.py  _verify_foot_spacing.py  _verify_mirror.py  _verify_tripod_com.py  aerial_manipulator_fwddyn.py  aerial_manipulator_invdyn.py  biped_gaits_fwddyn.py  biped_gaits_invdyn.py  biped_pose_fwddyn.py  biped_pose_invdyn.py  biped_walk_ubound.py  boxfddp_vs_boxddp.py  double_pendulum_continuous_fwddyn.py  double_pendulum_continuous_invdyn.py  double_pendulum_fwddyn.py  double_pendulum_invdyn.py  humanoid_backflip_fwddyn.py  humanoid_backflip_invdyn.py  humanoid_bar_fwddyn.py  humanoid_bar_invdyn.py  humanoid_frontflip_fwddyn.py  humanoid_frontflip_invdyn.py  humanoid_handstanding_fwddyn.py  humanoid_handstanding_invdyn.py  humanoid_manipulation.py  humanoid_manipulation_ubound.py  humanoid_monkey_bar_fwddyn.py  humanoid_monkey_bar_invdyn.py  humanoid_taichi.py  humanoid_walking_on_hands_fwddyn.py  humanoid_walking_on_hands_invdyn.py  lqr_fwddyn.py  lqr_invdyn.py  manipulator_fwddyn.py  manipulator_invdyn.py  marine_manipulator_fwddyn.py  marine_manipulator_invdyn.py  plot.py  quadrotor_fwddyn.py  (+79 more)
examples/log/: update_logfiles.sh
examples/pcb/: pcbWrapper.py
examples/pcb/pcb/meshes/: FL_calf.STL  FL_foot.STL  FL_hip.STL  FL_thigh.STL  FR_calf.STL  FR_foot.STL  FR_hip.STL  FR_thigh.STL  RL_calf.STL  RL_foot.STL  RL_hip.STL  RL_thigh.STL  RR_calf.STL  RR_foot.STL  RR_hip.STL  RR_thigh.STL
examples/pcb/pcb/urdf/: pcb.csv  pcb.urdf
examples/pcbA样数据/: trajectory_trotting_acc_005.csv  trajectory_trotting_acc_01.csv  trajectory_trotting_acc_015.csv  trajectory_trotting_acc_02.csv  trajectory_trotting_acc_025.csv  trajectory_trotting_acc_03.csv  trajectory_trotting_acc_f005.csv  trajectory_trotting_acc_f01.csv  trajectory_trotting_acc_f015.csv  trajectory_trotting_acc_f02.csv  trajectory_trotting_acc_f025.csv  trajectory_trotting_acc_f03.csv  trajectory_trotting_stand_01.csv
examples/pcbB样侧向移动数据608/: trajectory_trotting_acc_005.csv  trajectory_trotting_acc_015.csv  trajectory_trotting_acc_02.csv  trajectory_trotting_acc_f005.csv  trajectory_trotting_acc_f01.csv
examples/pcbB样数据/: trajectory_trotting_acc_005.csv  trajectory_trotting_acc_01.csv  trajectory_trotting_acc_015.csv  trajectory_trotting_acc_02.csv  trajectory_trotting_acc_025.csv  trajectory_trotting_acc_03.csv  trajectory_trotting_acc_f005.csv  trajectory_trotting_acc_f01.csv  trajectory_trotting_acc_f015.csv  trajectory_trotting_acc_f02.csv  trajectory_trotting_acc_f025.csv  trajectory_trotting_acc_f03.csv
examples/pcb_v2/: pcbWrapper.py
examples/pcb_v2/pcb_v2/mesh/: .asset_hash  530X6U_simple.stl  530X6U_simple.usd  Base_link.STL  F2N-0420.stl  FL_calf_link.STL  FL_foot_link.STL  FL_hip_link.STL  FL_thigh_link.STL  FL_wheel_link.STL  FR_calf_link.STL  FR_foot_link.STL  FR_hip_link.STL  FR_thigh_link.STL  FR_wheel_link.STL  RL_calf_link.STL  RL_foot_link.STL  RL_hip_link.STL  RL_thigh_link.STL  RL_wheel_link.STL  RR_calf_link.STL  RR_foot_link.STL  RR_hip_link.STL  RR_thigh_link.STL  RR_wheel_link.STL  X6U_full_SIMPLE.stl  X6U_full_SIMPLE.usd  car.stl  car_1.stl  config.yaml  x6u_simple_0515.usd
examples/pcb_v2/pcb_v2/mesh/Props/: instanceable_meshes.usd
examples/pcb_v2/pcb_v2/urdf/: pcb_v2.urdf
include/crocoddyl/core/: action-base.hxx  actuation-base.hpp  actuation-base.hxx  cost-base.hxx  diff-action-base.hxx  fwd.hpp  macros.hpp  solver-base.hpp  solver-base.hxx  state-base.hpp  state-base.hxx
include/crocoddyl/core/actions/: diff-lqr.hxx  lqr.hxx
include/crocoddyl/core/activations/: 2norm-barrier.hpp  quadratic-barrier.hpp  (+3 more)
include/crocoddyl/multibody/: cop-support.hpp  cop-support.hxx  friction-cone.hpp  friction-cone.hxx  wrench-cone.hpp  wrench-cone.hxx
notebooks/: 01_introduction_to_crocoddyl.ipynb  05_codegenerating_a_cartpole.ipynb  CMakeLists.txt  arm_manipulation.ipynb  bipedal_walking.ipynb  p2p.py  run_notebook.py  unicycle_towards_origin.ipynb  unicycle_towards_origin.py  whole_body_manipulation.ipynb
notebooks/solutions/: cartpole_ddp.py
src/core/: solver-base.cpp_fptype.in
src/core/solvers/: box-fddp.cpp_fptype.in  box-qp.cpp_fptype.in  fddp.cpp_fptype.in  intro.cpp_fptype.in  odyn-sqp.cpp_fptype.in
src/core/utils/: exception.cpp
unittest/: CMakeLists.txt  random_generator.hpp  test_boxqp.cpp  test_codegen.cpp  test_contact_constraints.cpp  test_contact_costs.cpp  test_costs_collision.cpp  test_diff_actions.cpp  test_impulse_constraints.cpp  test_impulse_costs.cpp  test_problem.cpp  test_solvers.cpp  test_states.cpp  unittest_common.hpp
unittest/bindings/: factory.py  test_copy.py  test_solvers.py
unittest/factory/: action.cpp  action.hpp  constraint.cpp  contact.cpp  contact_constraint.cpp  contact_constraint.hpp  cost.cpp  diff_action.cpp  impulse.cpp  impulse_constraint.cpp  impulse_constraint.hpp  pinocchio_model.cpp  residual.cpp  solver.cpp  solver.hpp  state.cpp
(+87 files in other folders)
